# home_5

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/app/: main.py  settings.py
src/app/api/: router.py  shema_comment.py  shemas.py
src/app/api/article/: routes.py
src/app/api/comments/: routers.py
src/app/api/user/: routers.py
src/app/db/: models.py  repository.py  servaices.py
src/app/exceptions/: common.py  http.py
src/migrations/models/: 0_20231124105139_init.py  0_20231201112638_init.py  1_20231124105426_update.py  2_20231124113759_update.py
